# openwebrtc

./: CMakeLists.txt  README.md
gst/: CMakeLists.txt  openwebrtc-gst.def
local/: CMakeLists.txt  owr_device_list.c  owr_local_media_source.c  owr_media_renderer.c  owr_video_renderer.c
owr/: CMakeLists.txt  openwebrtc.def  owr_inter_src.c  owr_media_source.c  owr_message_origin.c  owr_types.c  owr_types.h  owr_utils.c
tests/: CMakeLists.txt  test_client.c  test_gst_io.c
transport/: CMakeLists.txt  owr_payload.c  owr_remote_media_source.c  owr_session.c  owr_transport_agent.c
